# lxc-manager

./: .env.example  LICENSE  README.rst  config.yaml  config.yaml.example  dev_setup_dotnet.sh  dev_setup_node.sh  dev_setup_python.sh  pyproject.toml  run_lxc_manager.py
lxc_manager/: __init__.py  __main__.py  cli.py  config.py  config.yaml  container.py  log_config.py  lxc_manager.py  lxc_proxmoxer.py  name_generator.py  utils.py
tests/: test_lxc_manager.py
